[gd_scene load_steps=7 format=3 uid="uid://5826o7efrvta"]

[ext_resource type="Script" path="res://scripts/customize_interface.gd" id="1_akdeh"]
[ext_resource type="FontFile" uid="uid://wlpg7r5avxq4" path="res://addons/fonts/Perfect DOS VGA 437.ttf" id="1_m4tbe"]
[ext_resource type="StyleBox" uid="uid://biwwll0on0m1s" path="res://UI/PANEL/panel_button.tres" id="2_j62bh"]

[sub_resource type="Animation" id="Animation_n3t05"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_kvxqj"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3kggm"]
_data = {
"close": SubResource("Animation_n3t05"),
"open": SubResource("Animation_kvxqj")
}

[node name="CustomizeInterface" type="Control"]
process_mode = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akdeh")

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -586.0
offset_top = -448.0
offset_right = -288.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
alignment = 1
edit_alpha = false
presets_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1095.0
offset_top = -444.0
offset_right = -792.0
offset_bottom = 332.0
grow_horizontal = 0
grow_vertical = 2

[node name="HairButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "HAIR"

[node name="ShirtButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "SHIRT"

[node name="EmblemButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "EMBLEM"

[node name="ShortButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "SHORT"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 148.0
offset_top = 164.0
offset_right = 632.0
offset_bottom = 290.0
grow_vertical = 2

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "RESET"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_m4tbe")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = ExtResource("2_j62bh")
theme_override_styles/disabled_mirrored = ExtResource("2_j62bh")
theme_override_styles/disabled = ExtResource("2_j62bh")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover_pressed = ExtResource("2_j62bh")
theme_override_styles/hover_mirrored = ExtResource("2_j62bh")
theme_override_styles/hover = ExtResource("2_j62bh")
theme_override_styles/pressed_mirrored = ExtResource("2_j62bh")
theme_override_styles/pressed = ExtResource("2_j62bh")
theme_override_styles/normal_mirrored = ExtResource("2_j62bh")
theme_override_styles/normal = ExtResource("2_j62bh")
text = "SAVE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3kggm")
}
autoplay = "open"

[connection signal="pressed" from="VBoxContainer/HairButton" to="." method="_on_hair_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShirtButton" to="." method="_on_shirt_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EmblemButton" to="." method="_on_emblem_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShortButton" to="." method="_on_short_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
